WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270683
[visionOS] Audio in a background tab does not pause when UIWindowScene is backgrounded
https://bugs.webkit.org/show_bug.cgi?id=270683
Summary
[visionOS] Audio in a background tab does not pause when UIWindowScene is bac...
Jer Noble
Reported
2024-03-07 21:53:11 PST
[visionOS] Audio in a background tab does not pause when UIWindowScene is backgrounded
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2024-03-07 21:53:14 PST
<
rdar://problem/123911798
>
Jer Noble
Comment 2
2024-03-07 23:31:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25616
EWS
Comment 3
2024-03-11 18:04:22 PDT
Committed
275943@main
(86489e41e7b6): <
https://commits.webkit.org/275943@main
> Reviewed commits have been landed. Closing PR #25616 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug