Source/WebKit/UIProcess/ApplicationStateTracker.h
@@ -33,9 +33,18 @@
 
 OBJC_CLASS BKSApplicationStateMonitor;
 OBJC_CLASS UIView;
+OBJC_CLASS UIViewController;
 OBJC_CLASS UIWindow;
+OBJC_CLASS UIScene;
+OBJC_CLASS WKUIWindowSceneObserver;
 
 namespace WebKit {
+
+enum class ApplicationType : uint8_t {
+    Application,
+    ViewService,
+    Extension,
+};
 
 class ApplicationStateTracker : public CanMakeWeakPtr<ApplicationStateTracker> {
     WTF_MAKE_FAST_ALLOCATED;
@@ -45,7 +54,12 @@ public:
 
     bool isInBackground() const { return m_isInBackground; }
 
+    void setWindow(UIWindow *);
+    void setScene(UIScene *);
+
 private:
+    void setViewController(UIViewController *);
+
     void applicationDidEnterBackground();
     void applicationDidFinishSnapshottingAfterEnteringBackground();
     void applicationWillEnterForeground();
@@ -53,6 +67,14 @@ private:
     void didCompleteSnapshotSequence();
 
     WeakObjCPtr<UIView> m_view;
+    WeakObjCPtr<UIWindow> m_window;
+    WeakObjCPtr<UIScene> m_scene;
+    WeakObjCPtr<UIViewController> m_viewController;
+
+    RetainPtr<WKUIWindowSceneObserver> m_observer;
+
+    ApplicationType m_applicationType { ApplicationType::Application };
+
     SEL m_didEnterBackgroundSelector;
     SEL m_willEnterForegroundSelector;
     SEL m_willBeginSnapshotSequenceSelector;
@@ -64,12 +86,6 @@ private:
     id m_willEnterForegroundObserver;
     id m_willBeginSnapshotSequenceObserver;
     id m_didCompleteSnapshotSequenceObserver;
-};
-
-enum class ApplicationType {
-    Application,
-    ViewService,
-    Extension,
 };
 
 ApplicationType applicationType(UIWindow *);
